Bug 1669282 Disable scheme handlers in flatpak until portal is provided; r=stransky DONTBUILD

We need to disable current scheme handling under flatpak because it expects
there's system handler for all schemes (which is wrong for example for 'localhost')
until there's a flatpak portal which provides if system has a handler for specific
scheme.

Differential Revision: https://phabricator.services.mozilla.com/D97967