toolkit/system/gnome/nsGIOService.cpp
@@ -421,12 +421,11 @@ nsGIOService::GetAppForURIScheme(const nsACString& aURIScheme,
   *aApp = nullptr;
 
   // Application in flatpak sandbox does not have access to the list
-  // of installed applications on the system. We use generic
-  // nsFlatpakHandlerApp which forwards launch call to the system.
+  // of installed applications on the system. We cannot use generic
+  // nsFlatpakHandlerApp which forwards launch call to the system
+  // because that would make for example address localhost:1234 fail to open
   if (GetShouldUseFlatpakPortal()) {
-    nsFlatpakHandlerApp* mozApp = new nsFlatpakHandlerApp();
-    NS_ADDREF(*aApp = mozApp);
-    return NS_OK;
+    return NS_ERROR_FAILURE;
   }
 
   GAppInfo* app_info = g_app_info_get_default_for_uri_scheme(
